Enforce string worker properties contract
Standardized Worker properties across Server, Worker Core, Java/Android workers, Scenario inventory, and integration clients to a flat `Map<String, String>` contract (including `labInventoryLine` as a decimal string). Added proactive properties reporting support (`platform.worker.properties.reported`) with full and patch payloads, adapter-side baseline calibration on verified connect/reconnect, cache patch/rollback behavior, and broad test coverage for transport and cache contracts.

Also hardened documentation governance by expanding `check_docs.py` to validate Markdown/HTML anchors, reference links, fenced-code handling, Unicode slugs, and same-file fragments, added dedicated checker tests, wired them into CI, and refreshed architecture/proof docs to align ownership and scenario contracts.